tests/neg/i14303/A_1_c3.0.0.scala
def a: Int = {
  3
  4
}
def f: Int = match // error // error
